# filestorage

FileStorage/: CMakeLists.txt
FileStorage/client/: CMakeLists.txt
FileStorage/client/include/: MainFrame.h
FileStorage/client/src/: FileClient.cpp  MainFrame.cpp  MyApp.cpp
FileStorage/server/: CMakeLists.txt
FileStorage/server/include/: FileServer.h
client/include/: FileClient.h  MyApp.h
server/src/: FileServer.cpp  main.cpp
